--- a/templates/questionnaire/add.question.html
+++ b/templates/questionnaire/add.question.html
@@ -395,13 +395,19 @@
 
                                     <!-- Add multiple choice options -->
                                     <div class="col-xs-12 col-md-8" ng-show="atCategory.category_EN === 'Checkbox' || atCategory.category_EN === 'Radio Button'">
+
                                         <div class="input-group" style="margin-top:5px; margin-bottom:5px;" ng-repeat="option in newTemplateQuestion.subOptions">
                                             <input class="form-control" style="width:20%" type="number" placeholder="{{'QUESTIONNAIRE_MODULE.QUESTION_ADD.PLACEHOLDER_POSITION'|translate}}" ng-model="option.order" required/>
                                             <input class="form-control" style="width:40%" type="text" placeholder="{{'QUESTIONNAIRE_MODULE.QUESTION_ADD.PLACEHOLDER_TEXT_EN'|translate}}" ng-model="option.description_EN" required/>
                                             <input class="form-control" style="width:40%" type="text" placeholder="{{'QUESTIONNAIRE_MODULE.QUESTION_ADD.PLACEHOLDER_TEXT_FR'|translate}}" ng-model="option.description_FR" required/>
                                             <span class="input-group-btn"><button class="btn btn-default" ng-click="deleteOptions(option)"><span class="fa fa-minus"></span> {{'QUESTIONNAIRE_MODULE.QUESTION_ADD.DELETE'|translate}}</button></span>
                                         </div>
-                                        <button type="button" class="btn btn-default" style="float: left; margin-top:5px;" ng-click="addOptions()"><span class="fa fa-plus"></span> {{'QUESTIONNAIRE_MODULE.QUESTION_ADD.ADD_OPTION'|translate}}</button>
+                                        <div style="display: table;"><button type="button" class="btn btn-default" style="float: left; margin-top:5px;" ng-click="addOptions()"><span class="fa fa-plus"></span> {{'QUESTIONNAIRE_MODULE.QUESTION_ADD.ADD_OPTION'|translate}}</button></div>
+                                        <div class="col-xs-12 col-md-10" style="padding-left: 0;" ng-show="atCategory.category_EN === 'Checkbox'">
+                                            <div class="panel panel-danger" style="margin-top: 5px;">
+                                                <div class="panel-heading"><p style="color: #d9534f;text-align: left;"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> {{'QUESTIONNAIRE_MODULE.QUESTION_ADD.WARNING'|translate}}</p></div>
+                                            </div>
+                                        </div>
                                     </div>
 
                                     <!-- Add Sliders options -->
