Add publication page in development

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -168,7 +168,7 @@
 								<div class="panel-info" >
 									<div class="panel-content">
 										<div class="icon-home clearfix">
-											<span  class="fa fa-rss fa-sm" aria-hidden="true"></span>
+											<span  class="fa fa-cloud-upload fa-sm" aria-hidden="true"></span>
 										</div>
 										<div class="panel-title">
 											<h1>{{'NAVIGATION_MENU.PUBLICATIONS'|translate}}</h1>
