--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -145,7 +145,7 @@
                      style="cursor:pointer;" ng-click="goToPublication()">
                     <div class="side-panel-info-sm" ng-class="{active: currentPage == 'publication'}">
                         <div class="panel-content">
-                            <span style="font-size: 21px; vertical-align:middle" class="fa fa-rss"
+                            <span style="font-size: 21px; vertical-align:middle" class="fa fa-cloud-upload"
                                   aria-hidden="true"></span>
                             <div class="side-panel-title" style="display:inline-block;margin:0">
                                 <strong>{{'NAVIGATION_MENU.PUBLICATIONS'|translate}}</strong></div>
