--- a/templates/publication/publication.html
+++ b/templates/publication/publication.html
@@ -1,59 +1,106 @@
 <div id="main" ng-init="getpublication()">
-	<div id="top">
-		<div class="clearfix">
-			<div class="row">
-				<!-- Load side menu -->
+    <div id="top">
+        <div class="clearfix">
+            <div class="row">
+                <!-- Load side menu -->
                 <div id="side-panel-scrollbar" class="col-lg-2">
                     <div ng-include="'templates/side-panel-menu.html'"></div>
-				</div>
-				<!-- Right side detail view -->
-				<div class="col-lg-10 animated fadeIn">
-					<div class="row main-title">
-						<!-- Page title -->
-						<div class="col-xs-12 col-md-6 title-content">
-							<span class="fa fa-cloud-upload"></span>
-							<h1><strong>{{'PUBLICATION.LIST.TITLE'|translate}}</strong></h1>
-						</div>
-						<!-- Breadcrumbs -->
-						<div class="col-md-6 title-breadcrumbs">
-							<a ui-sref="home">{{'QUESTIONNAIRE_MODULE.BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-menu">{{'QUESTIONNAIRE_MODULE.DASHBOARD.TITLE'|translate}}</a>
-							<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'PUBLICATION.LIST.TITLE'|translate}}</strong></span>
-						</div>
-					</div>
-					<div class="row clearfix operations">
-						<div class="save-add col-xs-12 col-sm-6 col-md-8">
-							<!-- Add button -->
-							<a style="margin-right:20px;" href="" ng-click="goToAddPublication()" class="btn btn-md btn-outline item-button">
-								<span style="font-size: 17px;" class="fa fa-plus"></span>
-								<span style="font-size: 20px;"><strong>{{'PUBLICATION.LIST.ADD'|translate}}</strong></span>
-							</a>
+                </div>
+                <!-- Right side detail view -->
+                <div class="col-lg-10 animated fadeIn">
+                    <div class="row main-title">
+                        <!-- Page title -->
+                        <div class="col-xs-12 col-md-6 title-content">
+                            <span class="fa fa-cloud-upload"></span>
+                            <h1><strong>{{'PUBLICATION.LIST.TITLE'|translate}}</strong></h1>
+                        </div>
+                        <!-- Breadcrumbs -->
+                        <div class="col-md-6 title-breadcrumbs">
+                            <a ui-sref="home">{{'QUESTIONNAIRE_MODULE.BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-menu">{{'QUESTIONNAIRE_MODULE.DASHBOARD.TITLE'|translate}}</a>
+                            <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'PUBLICATION.LIST.TITLE'|translate}}</strong></span>
+                        </div>
+                    </div>
+                    <div class="row clearfix operations">
+                        <div class="save-add col-xs-12 col-sm-6 col-md-8">
+                            <!-- Add button -->
+                            <a style="margin-right:20px;" href="" ng-click="goToAddPublication()" class="btn btn-md btn-outline item-button">
+                                <span style="font-size: 17px;" class="fa fa-plus"></span>
+                                <span style="font-size: 20px;"><strong>{{'PUBLICATION.LIST.ADD'|translate}}</strong></span>
+                            </a>
                             <!-- Save changes button -->
                             <a href="" ng-click="submitPublishFlags()" class="btn btn-md item-button-success animated" ng-if="changesMade" ng-class="{pulse: hoverV}" ng-mouseenter="hoverV=true" ng-mouseleave="hoverV=false">
                                 <span style="font-size: 17px;" class="glyphicon glyphicon-ok"></span>
                                 <span style="font-size: 20px;"><strong>{{'PUBLICATION.LIST.SAVE'|translate}}</strong></span>
                             </a>
-						</div>
-						<!-- Search field -->
-						<div class="search col-xs-12 col-sm-6 col-md-4">
-							<div class="form-group has-feedback" style="margin-bottom: 0">
-								<input type="text" class="form-control" ng-model="filterValue" ng-change="filterQuestionnaire(filterValue)" placeholder="{{'PUBLICATION.LIST.SEARCH'|translate}}">
-								<span class="glyphicon glyphicon-search form-control-feedback"></span>
-							</div>
-						</div>
-					</div>
-					<!-- Load main table -->
-					<div class="panel-container" style="text-align:left;">
-						<div class="panel-info">
-							<div class="panel-input">
-								<div id="data-table">
-									<div class="gridStyle" ui-grid="gridOptions" ui-grid-resize-columns style="height:75vh"></div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="bannerMessage alert-success">{{bannerMessage}}</div>
+                        </div>
+                        <!-- Search field -->
+                        <div class="search col-xs-12 col-sm-6 col-md-4">
+                            <div class="form-group has-feedback" style="margin-bottom: 0">
+                                <input type="text" class="form-control" ng-model="filterValue" ng-change="filterQuestionnaire(filterValue)" placeholder="{{'PUBLICATION.LIST.SEARCH'|translate}}">
+                                <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row list-logs">
+                        <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-4 col-lg-4">
+                            <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                                <div class="btn-group" role="group">
+                                    <button type="button" class="btn btn-default" ng-click="switchDetailView('list')" ng-class="{'active': detailView == 'list', 'disabled': changesMade}">
+                                        <i class="fa fa-list"></i> {{'POSTS.LIST.LIST'|translate}}
+                                    </button>
+                                </div>
+                                <div class="btn-group" role="group">
+                                    <button type="button" class="btn btn-default" ng-click="switchDetailView('chart')" ng-class="{'active': detailView == 'chart', 'disabled': changesMade}">
+                                        <i class="fa fa-area-chart"></i> {{'POSTS.LIST.LOGS'|translate}}
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div ng-if="detailView == 'list'">
+                        <!-- Load main table -->
+                        <div class="panel-container" style="text-align:left;">
+                            <div class="panel-info">
+                                <div class="panel-input">
+                                    <div id="data-table">
+                                        <div class="gridStyle" ui-grid="gridOptions" ui-grid-resize-columns style="height:75vh"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div ng-if="detailView == 'chart'">
+                        <!-- Load chart -->
+                        <div class="panel-container" ng-if="!publicationChartLogs.length">
+                            <div class="panel-info">
+                                <div class="jumbotron content" style="background-color: transparent; margin-bottom:0">
+                                    <p style="font-size:45px;">{{'POSTS.LIST.NO_DATA'|translate}}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel-container" ng-if="publicationChartLogs.length">
+                            <div class="panel-info">
+                                <highchart id="chart1" config="chartConfig"></highchart>
+                            </div>
+                        </div>
+                        <div class="panel-container" ng-if="postListLogs.length > 0">
+                            <div class="panel-info">
+                                <div class="panel-input">
+                                    <div id="data-table">
+                                        <div class="gridStyle" ui-grid="gridLogOptions"  ui-grid-resize-columns ui-grid-auto-resize style="min-height: 20vh; max-height:35vh" ng-style="{height: (postListLogs.length*gridLogOptions.rowHeight)+32+'px'}"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bannerMessage alert-success">{{bannerMessage}}</div>
 </div>
