Separated the triggers from the post structure.

--- a/templates/post/post.html
+++ b/templates/post/post.html
@@ -40,7 +40,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row list-logs">
+<!--                    <div class="row list-logs">
                         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-4 col-lg-4">
                             <div class="btn-group btn-group-justified" role="group" aria-label="...">
                                 <div class="btn-group" role="group">
@@ -55,7 +55,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div>
                         <div ng-if="detailView == 'list'">
                             <!-- Load main table -->
