Separated validation and menu display in left in a different sets of watch controller.

--- a/templates/alias/edit.alias.html
+++ b/templates/alias/edit.alias.html
@@ -23,7 +23,7 @@
             {{alertMessage}}
         </p>
     </div>
-    <uib-accordion>
+    <uib-accordion close-others="false">
         <!-- SECTION: Assigned expressions -->
         <div uib-accordion-group is-open="expressionSection.open">
             <uib-accordion-heading>
