--- a/templates/diagnosis/edit.diagnosis-translation.html
+++ b/templates/diagnosis/edit.diagnosis-translation.html
@@ -14,7 +14,7 @@
     </div>
 </div>
 <div class="modal-body">
-    <uib-accordion>
+    <uib-accordion close-others="false">
         <!-- SECTION: Diagnosis names -->
         <div uib-accordion-group is-open="diagnosisSection.open">
             <uib-accordion-heading>
