--- a/templates/educational-material/edit.educational-material.html
+++ b/templates/educational-material/edit.educational-material.html
@@ -17,7 +17,7 @@
 </div>
 <div class="modal-body">
     <div class="bannerMessageModal alert-success">{{bannerMessageModal}}</div>
-    <uib-accordion>
+    <uib-accordion close-others="false">
         <!-- SECTION: Titles -->
         <div uib-accordion-group is-open="titleSection.open">
             <uib-accordion-heading>
