--- a/templates/email/edit.email.html
+++ b/templates/email/edit.email.html
@@ -14,7 +14,7 @@
     </div>
 </div>
 <div class="modal-body">
-    <uib-accordion>
+    <uib-accordion close-others="false">
         <!-- SECTION: Subject -->
         <div uib-accordion-group is-open="subjectSection.open">
             <uib-accordion-heading>
