--- a/templates/notification/edit.notification.html
+++ b/templates/notification/edit.notification.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 <div class="modal-body">
-    <uib-accordion>
+    <uib-accordion close-others="false">
         <!-- SECTION: Titles -->
         <div uib-accordion-group is-open="titleSection.open">
             <uib-accordion-heading>
