--- a/templates/questionnaire/edit.template.question.html
+++ b/templates/questionnaire/edit.template.question.html
@@ -13,7 +13,7 @@
     </div>
 </div>
 <div class="modal-body">
-    <uib-accordion>
+    <uib-accordion close-others="false">
         <!-- SECTION: Title -->
         <div uib-accordion-group is-open="titleSection.open">
             <uib-accordion-heading>
