--- a/templates/test-result/edit.test-result.html
+++ b/templates/test-result/edit.test-result.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 <div class="modal-body">
-    <uib-accordion>
+    <uib-accordion close-others="false">
         <!-- SECTION: Test names -->
         <div uib-accordion-group is-open="testsSection.open">
             <uib-accordion-heading>
