--- a/templates/user/edit.user.html
+++ b/templates/user/edit.user.html
@@ -17,7 +17,7 @@
     </div>
 </div>
 <div class="modal-body">
-    <uib-accordion>
+    <uib-accordion close-others="false">
 
         <!-- SECTION: Password -->
         <div uib-accordion-group is-open="passwordSection.open">
