--- a/templates/publication/edit.publication.html
+++ b/templates/publication/edit.publication.html
@@ -23,7 +23,7 @@
             {{alertMessage}}
         </p>
     </div>
-    <uib-accordion>
+    <uib-accordion close-others="false">
         <!-- SECTION: Assigned expressions -->
         <div uib-accordion-group is-open="expressionSection.open">
             <uib-accordion-heading>
