--- a/templates/questionnaire/edit.questionnaire.html
+++ b/templates/questionnaire/edit.questionnaire.html
@@ -21,7 +21,7 @@
     </div>
 </div>
 <div class="modal-body">
-    <uib-accordion>
+    <uib-accordion close-others="false">
         <!-- SECTION: Titles -->
         <div uib-accordion-group is-open="titleSection.open">
             <uib-accordion-heading>
