Redone patient section selection

--- a/templates/publication/add.publication.html
+++ b/templates/publication/add.publication.html
@@ -613,6 +613,11 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <div class="col-xs-12">
+                                        <button class="btn btn-default" ng-click="">{{'PUBLICATION.ADD.RESET_DATE'|translate}}</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <!-- SECTION: publications options -->
