--- a/templates/publication/add.publication.html
+++ b/templates/publication/add.publication.html
@@ -341,28 +341,22 @@
                                 </div>
                             </div>
                             <!-- SECTION: Doctor triggers -->
-                            <div uib-accordion-group is-open="triggerSection.doctor.open" class="panel-container summary-box " ng-class="{fadeIn:triggerSection.show}" is-disabled="!checkTriggers(doctorTriggerList)" ng-if="checkTriggers(doctorTriggerList) && triggerSection.doctor.available">
+                            <div uib-accordion-group is-open="triggerSection.doctor.open" class="panel-container summary-box " ng-class="{fadeIn:triggerSection.show}" ng-if="(toSubmit.triggers|filter:{type:'Doctor'}).length && triggerSection.doctor.available">
                                 <uib-accordion-heading>
                                     <div class="row" style="align-items: center">
                                         <div class="col-md-2">
-                                            <span ng-if="checkTriggers(doctorTriggerList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
+                                            <span ng-if="(toSubmit.triggers|filter:{type:'doctor'}).length" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                                         </div>
                                         <div class="col-md-8">
                                             <strong>{{'PUBLICATION.ADD.DOCTOR_TRIGGERS'|translate}}</strong>
                                         </div>
                                         <div class="col-md-2">
-                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': triggerSection.doctor.open, 'glyphicon-chevron-right': !triggerSection.doctor.open}" ng-if="checkTriggers(doctorTriggerList)"></i>
+                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': triggerSection.doctor.open, 'glyphicon-chevron-right': !triggerSection.doctor.open}" ng-if="(toSubmit.triggers|filter:{type:'Doctor'}).length"></i>
                                         </div>
                                     </div>
                                 </uib-accordion-heading>
-                                <div ng-if="checkTriggers(doctorTriggerList) && !selectAll.doctor.all" class="description">
-                                    <p>
-                                    <ul style="max-height: 100px; overflow-y: auto;">
-                                        <li ng-repeat="doctor in doctorTriggerList | filter: {added: 1} : 1">
-                                            {{doctor.name}}
-                                        </li>
-                                    </ul>
-                                    </p>
+                                <div ng-if="(doctorTriggerList|filter:{added:true}).length && !selectAll.doctor.all" class="description">
+                                    <p><ul style="max-height: 100px; overflow-y: auto;"><li ng-repeat="doctor in doctorTriggerList | filter: {added: true} : 1">{{doctor.name}}</li></ul></p>
                                 </div>
                                 <div ng-if="selectAll.doctor.all" class="description">
                                     <p>
@@ -372,22 +366,22 @@
                                 </div>
                             </div>
                             <!-- SECTION: Treatment Machine triggers -->
-                            <div uib-accordion-group is-open="triggerSection.machine.open" class="panel-container summary-box " ng-class="{fadeIn:triggerSection.show}" is-disabled="!checkTriggers(machineTriggerList)" ng-if="checkTriggers(machineTriggerList) && triggerSection.machine.available">
+                            <div uib-accordion-group is-open="triggerSection.machine.open" class="panel-container summary-box " ng-class="{fadeIn:triggerSection.show}" ng-if="(toSubmit.triggers|filter:{type:'Machine'}).length && triggerSection.machine.available">
                                 <uib-accordion-heading>
                                     <div class="row" style="align-items: center">
                                         <div class="col-md-2">
-                                            <span ng-if="checkTriggers(machineTriggerList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
+                                            <span ng-if="(toSubmit.triggers|filter:{type:'machine'}).length" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                                         </div>
                                         <div class="col-md-8">
                                             <strong>{{'PUBLICATION.ADD.TREATMENT_MACHINE_TRIGGERS'|translate}}</strong>
                                         </div>
                                         <div class="col-md-2">
-                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': triggerSection.machine.open, 'glyphicon-chevron-right': !triggerSection.machine.open}" ng-if="checkTriggers(machineTriggerList)"></i>
+                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': triggerSection.machine.open, 'glyphicon-chevron-right': !triggerSection.machine.open}" ng-if="(toSubmit.triggers|filter:{type:'Machine'}).length"></i>
                                         </div>
                                     </div>
                                 </uib-accordion-heading>
-                                <div ng-if="checkTriggers(machineTriggerList) && !selectAll.machine.all" class="description">
-                                    <p><ul style="max-height: 100px; overflow-y: auto;"><li ng-repeat="machine in machineTriggerList | filter: {added: 1} : 1">{{machine.name}}</li></ul></p>
+                                <div ng-if="(machineTriggerList|filter:{added:true}).length && !selectAll.machine.all" class="description">
+                                    <p><ul style="max-height: 100px; overflow-y: auto;"><li ng-repeat="machine in machineTriggerList | filter: {added: true} : 1">{{machine.name}}</li></ul></p>
                                 </div>
                                 <div ng-if="selectAll.machine.all" class="description">
                                     <p><span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>{{'PUBLICATION.ADD.ALL_TREATMENT_MACHINES'|translate}}</p>
@@ -575,7 +569,7 @@
                             </div>
                         </div>
                         <!-- SECTION: Publish date -->
-                        <div ng-if="toSubmit.publishDateTime && validator.materialId.completed" style="margin-bottom: 15px;">
+                        <div ng-if="publishDate.available && validator.materialId.completed" style="margin-bottom: 15px;">
                             <div class="col-xs-12 side-menu-title">
                                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                                 <span style="background-color:#e6edfa; padding: 0 10px;">
@@ -586,12 +580,22 @@
                             </div>
                             <div class="col-xs-12">
                                 <p style="margin-bottom: 10px;">
-                                    <span ng-hide="toSubmit.materialId.type =='Announcement'"><strong>{{'PUBLICATION.ADD.OPTIONAL_FIELD'|translate}}</strong></span>
-                                    <span ng-show="toSubmit.materialId.type =='Announcement'" style="color:#d9534f"><strong>{{'PUBLICATION.ADD.REQUIRED'|translate}}</strong></span>
+                                    <span ng-hide="validator.publishDateTime.mandatory"><strong>{{'PUBLICATION.ADD.OPTIONAL_FIELD'|translate}}</strong></span>
+                                    <span ng-show="validator.publishDateTime.mandatory" style="color:#d9534f"><strong>{{'PUBLICATION.ADD.REQUIRED'|translate}}</strong></span>
                                     {{'PUBLICATION.ADD.PUBLISH_DATE_EXPLANATION'|translate}}
                                 </p>
+                                <div class="row">
+                                    <div class="col-xs-12" ng-if="(!toSubmit.publishDateTime && publishDate.available) && !validator.publishDateTime.mandatory">
+                                        <button  class="btn btn-success" ng-click="preparePublishDate()"><span style="font-size: 17px;" class="fa fa-plus"></span> <span style="font-size: 20px;">{{'PUBLICATION.ADD.ADD_2'|translate}}</span></button>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-12" ng-if="(toSubmit.publishDateTime || !publishDate.available) && !validator.publishDateTime.mandatory">
+                                        <button class="btn btn-danger" ng-click="deletePublishDate()"><span style="font-size: 17px;" class="glyphicon glyphicon-minus"></span> <span style="font-size: 20px;">{{'PUBLICATION.ADD.REMOVE'|translate}}</span></button>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-xs-12">
+                            <div class="col-xs-12" ng-if="(toSubmit.publishDateTime || !publishDate.available) || validator.publishDateTime.mandatory">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-7 col-md-4" style="padding-top: 10px;margin-bottom:20px;">
                                         <p class="input-group">
@@ -605,11 +609,6 @@
                                         <div>
                                             <div uib-timepicker ng-model="toSubmit.publishDateTime.publish_time" ng-change="publishDateUpdate()" minute-step="5" show-meridian="false"></div>
                                         </div>
-                                    </div>
-                                </div>
-                                <div class="row" ng-if="leftMenu.publishDateTime.display">
-                                    <div class="col-xs-12">
-                                        <button class="btn btn-danger" ng-click="resetPublishDate()"><span style="font-size: 20px;">{{'PUBLICATION.ADD.RESET_DATE'|translate}}</span></button>
                                     </div>
                                 </div>
                             </div>
@@ -1068,24 +1067,22 @@
                                         <div class="panel-info">
                                             <div class="panel-content">
                                                 <div class="panel-input">
-                                                    <div class="list-space">
-                                                        <div class="input-group">
-                                                            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-                                                            <input maxlength="100" class="form-control" type="text" ng-model="machineSearchField" ng-change="searchMachine(machineSearchField)" placeholder="{{'PUBLICATION.ADD.SEARCH'|translate}}"/>
-                                                        </div>
-                                                        <div style="padding: 10px;">
-                                                            <label>
-                                                                <input type="checkbox" ng-click="selectAllTriggers(machineTriggerList, searchMachineFilter, selectAll.machine)" ng-checked="selectAll.machine.checked"> {{'PUBLICATION.ADD.SELECT_ALL'|translate}}
-                                                            </label>
-                                                        </div>
-                                                        <ul class="list-items">
-                                                            <li ng-repeat="machine in machineTriggerList | filter: searchMachineFilter">
-                                                                <label>
-                                                                    <input type="checkbox" ng-click="selectTrigger(machine, selectAll.machine)" ng-checked="machine.added" /> {{machine.name}}
-                                                                </label>
-                                                            </li>
-                                                        </ul>
+                                                    <div class="input-group">
+                                                        <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+                                                        <input maxlength="100" class="form-control" type="text" ng-model="machineSearchField" ng-change="selectAll.machine.checked = false;" ng-disabled="selectAll.machine.checked && selectAll.machine.all" placeholder="{{'PUBLICATION.ADD.SEARCH'|translate}}"/>
                                                     </div>
+                                                    <div style="padding: 10px;">
+                                                        <label>
+                                                            <input type="checkbox" ng-click="toggleAllTriggers(machineTriggerList, machineSearchField, selectAll.machine, triggerSection.machine)" ng-checked="selectAll.machine.checked"> {{'PUBLICATION.ADD.SELECT_ALL'|translate}}
+                                                        </label>
+                                                    </div>
+                                                    <ul class="list-items" ng-show="!selectAll.machine.checked || !selectAll.machine.all">
+                                                        <li ng-repeat="machine in machineTriggerList | filter: machineSearchField">
+                                                            <label>
+                                                                <input ng-disabled="selectAll.machine.checked && selectAll.machine.all" type="checkbox" ng-click="selectTrigger(machine, selectAll.machine, triggerSection.machine)" ng-model="machine.added" /> {{machine.name}}
+                                                            </label>
+                                                        </li>
+                                                    </ul>
                                                 </div>
                                             </div>
                                         </div>
