OPAL-196. Decoupling the Aria connection from the Patient class.
The Patient class is now independent of Aria. If
Aria is not active, the patients lists from OpalDB will
be only used. If Aria should be active but there is a DB problem, an error msg will be
displayed in the appropriate section.

--- a/templates/navbar-menu.html
+++ b/templates/navbar-menu.html
@@ -67,12 +67,6 @@
                             {{'NAVIGATION_MENU.EMAIL'|translate}}
                         </a>
                     </li>-->
-<!--                    <li ui-sref-active="active">
-                        <a ui-sref="legacy-questionnaire" ng-click="closeNav()">
-                            <span class="fa fa-pencil-square" aria-hidden="true"></span>
-                            {{'NAVIGATION_MENU.LEGACY_QUESTIONNAIRE'|translate}}
-                        </a>
-                    </li>-->
                 </ul>
             </li>
             <li class="dropdown" ng-class="{active: currentActiveAdministration()}" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
@@ -97,7 +91,7 @@
                         </a>
                     </li>
                     <li ui-sref-active="active" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
-                        <a ui-sref="patients-register" ng-click="closeNav()">
+                        <a ng-click="closeNav();patientRegistration();">
                             <span class="fa fa-user-plus" aria-hidden="true"></span>
                             {{'NAVIGATION_MENU.PATIENT_REGISTRATION'|translate}}
                         </a>
