--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -154,24 +154,6 @@
                 </div>
             </div>
 -->
-
-            <!-- SECTION: Legacy Questionnaire -->
-<!--            <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
-                <div class="panel-container animated"
-                     ng-class="{pulse: hoverLegacyQuestionnaireMenu, active: currentPage == 'legacy-questionnaire'}"
-                     ng-mouseenter="hoverLegacyQuestionnaireMenu=true"
-                     ng-mouseleave="hoverLegacyQuestionnaireMenu=false" style="cursor:pointer;"
-                     ng-click="goToLegacyQuestionnaire()">
-                    <div class="side-panel-info-sm" ng-class="{active: currentPage == 'legacy-questionnaire'}">
-                        <div class="panel-content">
-                            <span style="font-size: 21px; vertical-align:middle" class="fa fa-pencil-square"
-                                  aria-hidden="true"></span>
-                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.LEGACY_QUESTIONNAIRE'|translate}}</strong></div>
-                        </div>
-                    </div>
-                </div>
-            </div>-->
-
         </div>
 
         <!-- Administration tools -->
@@ -237,10 +219,9 @@
 
             <!-- SECTION: Patient registration -->
             <div class="col-md-12" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
-                <div class="panel-container animated"
+                <div class="panel-container animated" ng-click="patientRegistration();"
                      ng-class="{pulse: hoverPatRegMenu, active: currentPage == 'patients-register'}"
-                     ng-mouseenter="hoverPatRegMenu=true" ng-mouseleave="hoverPatRegMenu=false" style="cursor:pointer;"
-                     ng-click="goToPatientRegistration()">
+                     ng-mouseenter="hoverPatRegMenu=true" ng-mouseleave="hoverPatRegMenu=false" style="cursor:pointer;">
                     <div class="side-panel-info-sm" ng-class="{active: currentPage == 'patients-register'}">
                         <div class="panel-content">
                             <span style="font-size: 21px; vertical-align:middle" class="fa fa-user-plus"
