--- a/templates/publication/edit.publication.html
+++ b/templates/publication/edit.publication.html
@@ -9,7 +9,7 @@
     <div class="modal-buttons col-xs-12 col-md-6">
         <span>
             <form method="post" ng-submit="updatePublishedQuestionnaire()">
-                <input class="btn btn-primary submit" ng-class="{'disabled': !checkForm()}" type="submit" value="{{'PUBLICATION.EDIT.SAVE'|translate}}">
+                <input class="btn btn-primary submit" ng-class="{'disabled': (!formReady || !frequencyChanged) && (!changesDetected) || !demoTrigger.age.valid}" type="submit" value="{{'PUBLICATION.EDIT.SAVE'|translate}}">
                 <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'PUBLICATION.EDIT.CANCEL'|translate}}">
             </form>
         </span>
@@ -47,13 +47,13 @@
                 <div class="col-xs-12 col-sm-6">
                     <div class="input-group">
                         <span class="input-group-addon">{{'PUBLICATION.EDIT.ENGLISH_TITLE'|translate}}</span>
-                        <textarea class="form-control" rows="1" ng-model="toSubmit.name_EN" placeholder="{{'PUBLICATION.EDIT.PLACEHOLDER_ENGLISH_TITLE'|translate}}" ng-change="detailsUpdated()"></textarea>
+                        <textarea class="form-control" rows="1" ng-model="toSubmit.name.name_EN" ng-change="nameUpdate()" placeholder="{{'PUBLICATION.EDIT.PLACEHOLDER_ENGLISH_TITLE'|translate}}"></textarea>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
                     <div class="input-group">
                         <span class="input-group-addon">{{'PUBLICATION.EDIT.FRENCH_TITLE'|translate}}</span>
-                        <textarea class="form-control" rows="1" ng-model="toSubmit.name_FR" placeholder="{{'PUBLICATION.EDIT.PLACEHOLDER_FRENCH_TITLE'|translate}}" ng-change="detailsUpdated()"></textarea>
+                        <textarea class="form-control" rows="1" ng-model="toSubmit.name.name_FR" ng-change="nameUpdate()" placeholder="{{'PUBLICATION.EDIT.PLACEHOLDER_FRENCH_TITLE'|translate}}"></textarea>
                     </div>
                 </div>
             </div>
@@ -62,16 +62,17 @@
         <div ng-if="publishDate.available" uib-accordion-group is-open="publishDateSection.open">
             <uib-accordion-heading>
                 <div>
-                    <strong>{{'POSTS.EDIT.PUBLISH_DATE'|translate}} </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': publishDateSection.open, 'glyphicon-chevron-right': !publishDateSection.open}"></i>
+                    <strong>{{'PUBLICATION.EDIT.PUBLISH_DATE'|translate}} </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': publishDateSection.open, 'glyphicon-chevron-right': !publishDateSection.open}"></i>
                 </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
-                <strong>{{'POSTS.EDIT.CURRENT_DATE'|translate}}</strong><br>
+                <strong>{{'PUBLICATION.EDIT.CURRENT_DATE'|translate}}</strong><br>
                 <p>
                     <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-                    <span ng-hide="toSubmit.publishDateTime.publish_date && toSubmit.publishDateTime.publish_time && dateEntered"> {{'POSTS.EDIT.NONE'|translate}}</span>
-                    <span ng-show="toSubmit.publishDateTime.publish_date && toSubmit.publishDateTime.publish_time && dateEntered">
-                        {{toSubmit.publishDateTime.publish_date | date:'yyyy-MM-dd'}} {{'POSTS.EDIT.AT'|translate}} {{toSubmit.publishDateTime.publish_time | date:'HH:mm'}}
+                    <span ng-show="preview.display == 1">{{'PUBLICATION.EDIT.NONE'|translate}}</span>
+                    <span ng-show="preview.display == 2">{{preview.publish_date | date:'yyyy-MM-dd'}} {{'PUBLICATION.EDIT.AT'|translate}} {{preview.publish_time | date:'HH:mm'}}</span>
+                    <span ng-show="preview.display == 3">
+                        {{toSubmit.publishDateTime.publish_date | date:'yyyy-MM-dd'}} {{'PUBLICATION.EDIT.AT'|translate}} {{toSubmit.publishDateTime.publish_time | date:'HH:mm'}}
                     </span>
                 </p>
             </div>
@@ -266,7 +267,7 @@
                                 {{'PUBLICATION.EDIT.REPEAT_INTERVAL'|translate}}
                             </label>
                             <div class="col-xs-3">
-                                <input class="form-control" ng-model="customFrequency.meta_value" type="number" max="59" min="1">
+                                <input class="form-control" ng-model="customFrequency.meta_value" type="number" max="59" min="1" ng-change="setFrequencyChangesMade();">
                             </div>
                             <div class="col-xs-6">
                                 <select class="form-control"
@@ -319,7 +320,7 @@
                             </div>
                             <div ng-if="repeatSub == 'onDate' && customFrequency.unit.id == 'month'"
                                  class="no-calendar-header col-xs-12" style="margin-bottom: 10px;">
-                                <multiple-date-picker ng-model="selectedDatesInMonth" month="staticMonth"></multiple-date-picker>
+                                <multiple-date-picker ng-model="selectedDatesInMonth" month="staticMonth" ng-click="setFrequencyChangesMade()"></multiple-date-picker>
                             </div>
                             <div ng-if="repeatSub == 'onWeek' || customFrequency.unit.id == 'year'" class="col-xs-4"
                                  style="margin-bottom: 10px;">
@@ -469,26 +470,16 @@
                 <strong>{{'PUBLICATION.EDIT.CURRENT_TRIGGER_APPT_STATUS'|translate}}</strong><br>
                 <p>
                     <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-                    <span ng-if="!checkTriggers(appointmentStatusList)">{{'PUBLICATION.EDIT.NO_FILTER'|translate}}</span>
-                    <span ng-repeat="selectedAppointmentStatus in appointmentStatusList | filter: {added: true} : 1"
-                          ng-if="checkTriggers(appointmentStatusList)">
-                    {{selectedAppointmentStatus.name_display}}
-                    </span>
+                    {{appointmentStatus}}
                 </p>
             </div>
             <div class="row">
-                <div ng-repeat="appointmentStatus in appointmentStatusList"
-                     class="col-xs-12 col-sm-4 col-md-3 item-panel-select">
-                    <div class="panel-container animated" style="cursor:pointer;"
-                         ng-class="{pulse: hover, active: appointmentStatus.added}"
-                         ng-click="appointmentStatusUpdate($index)" ng-mouseenter="hover=true"
-                         ng-mouseleave="hover=false">
-                        <div class="panel-info" ng-class="{active: appointmentStatus.added}">
+                <div ng-repeat="appointmentStatus in appointmentStatusList" class="col-xs-12 col-sm-4 col-md-3 item-panel-select">
+                    <div class="panel-container" style="cursor:pointer;" ng-class="{pulse: hover, active: apptSelected == appointmentStatus.id}" ng-click="appointmentStatusUpdate(appointmentStatus)" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
+                        <div class="panel-info" ng-class="{active: apptSelected == appointmentStatus.id}">
                             <div class="panel-content" style="text-align:center">
-                                <span ng-if="!appointmentStatus.added" style="font-size:30px;"
-                                      class="glyphicon glyphicon-minus"></span>
-                                <span ng-if="appointmentStatus.added" style="font-size:30px;"
-                                      class="glyphicon glyphicon-ok"></span>
+                                <span ng-if="apptSelected != appointmentStatus.id" style="font-size:30px;" class="glyphicon glyphicon-minus"></span>
+                                <span ng-if="apptSelected == appointmentStatus.id" style="font-size:30px;" class="glyphicon glyphicon-ok"></span>
                                 <div class="option-panel-title">{{appointmentStatus.name_display}}</div>
                             </div>
                         </div>
