Roll back to old patient registration module.

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -276,7 +276,7 @@
 
 						<!-- SECTION: Patient registration -->
 						<div class="col-xs-12 col-sm-6" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
-							<div class="panel-container animated" ng-class="{pulse: hoverPatRegMenu}" ng-mouseenter="hoverPatRegMenu=true" ng-mouseleave="hoverPatRegMenu=false" style="cursor:pointer;" ng-click="patientRegistration()">
+							<div class="panel-container animated" ng-class="{pulse: hoverPatRegMenu}" ng-mouseenter="hoverPatRegMenu=true" ng-mouseleave="hoverPatRegMenu=false" style="cursor:pointer;" ng-click="goToPatientRegistration()">
 								<div class="panel-info" >
 									<div class="panel-content">
 										<div class="icon-home clearfix">
