opal-109 - coding publication chart log underway

--- a/templates/questionnaire/questionnaire-main-menu.html
+++ b/templates/questionnaire/questionnaire-main-menu.html
@@ -91,7 +91,7 @@
 							</div>
 						</div>
                         <!-- View Publication Tools -->
-                        <div class="col-xs-12 col-sm-6 col-md-4">
+<!--                        <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="panel-container animated" ng-class="{pulse: hoverPublicationTool}" ng-mouseenter="hoverPublicationTool=true" ng-mouseleave="hoverPublicationTool=false" style="cursor:pointer;" ng-click="goToPublicationTool()">
                                 <div class="panel-info">
                                     <div class="panel-content">
@@ -107,7 +107,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
 					</div>
 				</div>
 			</div>
