--- a/templates/questionnaire/questionnaire-side-menu.html
+++ b/templates/questionnaire/questionnaire-side-menu.html
@@ -71,7 +71,7 @@
             </div>
         </div>
         <!-- Publication Tools -->
-        <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
+<!--        <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
             <div class="panel-container animated" ng-class="{pulse: hoverPublicationTool, active: currentPage == 'questionnaire/publication-tool'}" ng-mouseenter="hoverPublicationTool=true" ng-mouseleave="hoverPublicationTool=false" style="cursor:pointer;" ng-click="goToPublicationTool()">
                 <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/publication-tool'}">
                     <div class="panel-content">
@@ -80,6 +80,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
 </div>
