OPAL-179 - finished chart logs and list logs.

--- a/templates/publication/log.publication.html
+++ b/templates/publication/log.publication.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12 col-md-6">
         <h2 class="modal-title">
             <span class="fa fa-area-chart"></span>
-            {{'PUBLICATION.LOG.TITLE'|translate}} - {{currentPost.type_display}}
+            {{'PUBLICATION.LOG.TITLE'|translate}} - {{currentPublication.module_display}}
         </h2>
     </div>
     <div class="modal-buttons col-xs-12 col-md-6">
