OPAL-218 - Coding add and listing custom code underway

--- a/templates/navbar-menu.html
+++ b/templates/navbar-menu.html
@@ -79,7 +79,7 @@
                         </a>
                     </li>
                     <li ui-sref-active="active" ng-if="isAuthorized([userRoles.admin])">
-                        <a ui-sref="custom-codes" ng-click="closeNav()">
+                        <a ui-sref="custom-code" ng-click="closeNav()">
                             <span class="fa fa-stethoscope" aria-hidden="true"></span>
                             {{'NAVIGATION_MENU.CUSTOM_CODES'|translate}}
                         </a>
