--- a/templates/custom-code/custom.codes.html
+++ b/templates/custom-code/custom.codes.html
@@ -12,25 +12,25 @@
                         <!-- Page title -->
                         <div class="col-xs-12 col-md-9 title-content">
                             <span class="glyphicon glyphicon-cloud"></span>
-                            <h1><strong>{{'DIAGNOSIS.LIST.TITLE'|translate}}</strong></h1>
+                            <h1><strong>{{'CUSTOM_CODE.LIST.TITLE'|translate}}</strong></h1>
                         </div>
                         <!-- Breadcrumbs -->
                         <div class="col-md-3 title-breadcrumbs">
-                            <span><a ui-sref="home">{{'BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'DIAGNOSIS.LIST.TITLE'|translate}}</strong></span>
+                            <span><a ui-sref="home">{{'BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'CUSTOM_CODE.LIST.TITLE'|translate}}</strong></span>
                         </div>
                     </div>
                     <div class="row clearfix operations">
                         <div class="save-add col-xs-12 col-sm-6 col-md-8">
                             <!-- Add button -->
-                            <a style="margin-right:20px;" href="" ng-click="goToAddDiagnosisTranslation()" class="btn btn-md btn-outline item-button">
+                            <a style="margin-right:20px;" href="" ng-click="goToAddCustomCode()" class="btn btn-md btn-outline item-button">
                                 <span style="font-size: 17px;" class="glyphicon glyphicon-plus"></span>
-                                <span style="font-size: 20px;"><strong>{{'DIAGNOSIS.LIST.ADD'|translate}}</strong></span>
+                                <span style="font-size: 20px;"><strong>{{'CUSTOM_CODE.LIST.ADD'|translate}}</strong></span>
                             </a>
                         </div>
                         <!-- Search field -->
                         <div class="search col-xs-12 col-sm-6 col-md-4">
                             <div class="form-group has-feedback" style="margin-bottom: 0">
-                                <input type="text" class="form-control" ng-model="filterValue" ng-change="filterDiagnosisTranslation(filterValue)" placeholder="{{'DIAGNOSIS.LIST.SEARCH'|translate}}">
+                                <input type="text" class="form-control" ng-model="filterValue" ng-change="filterCustomCode(filterValue)" placeholder="{{'CUSTOM_CODE.LIST.SEARCH'|translate}}">
                                 <span class="glyphicon glyphicon-search form-control-feedback"></span>
                             </div>
                         </div>
