--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -205,10 +205,10 @@
             <!-- SECTION: Custom Codes -->
             <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
                 <div class="panel-container animated"
-                     ng-class="{pulse: hoverDiagnosisMenu, active: currentPage == 'custom-codes'}"
+                     ng-class="{pulse: hoverDiagnosisMenu, active: currentPage == 'custom-code'}"
                      ng-mouseenter="hoverDiagnosisMenu=true" ng-mouseleave="hoverDiagnosisMenu=false"
                      style="cursor:pointer;" ng-click="goToCustomCodes()">
-                    <div class="side-panel-info-sm" ng-class="{active: currentPage == 'custom-codes'}">
+                    <div class="side-panel-info-sm" ng-class="{active: currentPage == 'custom-code'}">
                         <div class="panel-content">
                             <span style="font-size: 21px; vertical-align:middle" class="fa fa-exchange"
                                   aria-hidden="true"></span>
